tests/kulezi_tests/bad/assign_method_result.lat
class A {
    A f() { return self; }
}

int main() {
    A a = new A;
    a.f() = new A;
    return 0;
}